unpackaged/main/default/objects/SPARTADMS__Controlled_Printing__c/SPARTADMS__Controlled_Printing__c.object-meta.xml
<CustomObject>
    <label>Controlled Printing History</label>
    <nameField>
        <displayFormat>PNO-{MMDDYYYY}-{0000}</displayFormat>
        <label>Print No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Controlled Printing History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>