unpackaged/main/default/objects/SPARTADMS__Controlled_Printing__c/fields/SPARTADMS__Created_Date__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Created_Date__c</fullName>
        <description>Created Date</description>
        <inlineHelpText>Created Date</inlineHelpText>
        <label>Created Date</label>
        <type>DateTime</type>
    </CustomField>