unpackaged/main/default/objects/SPARTADMS__Controlled_Printing__c/fields/SPARTADMS__Document_Status__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Document_Status__c</fullName>
        <label>Document Status</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>