unpackaged/main/default/objects/SPARTADMS__Controlled_Printing__c/fields/SPARTADMS__Document_Version__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Document_Version__c</fullName>
        <label>Document Version</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>