unpackaged/main/default/objects/SPARTADMS__Controlled_Printing__c/fields/SPARTADMS__Related_Document__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Related_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Document</label>
        <referenceTo>SPARTADMS__Corporate_Document__c</referenceTo>
        <relationshipLabel>Controlled Printing History</relationshipLabel>
        <relationshipName>Controlled_Printing</relationshipName>
        <type>Lookup</type>
    </CustomField>